# neural_network

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: simple_net.h
core/src/: simple_net.cc  simple_net.h
mnist_example/: prepare_data.cc  start.cc
test/: class_test.cc  class_test2.cc
